frontend/src/style.css
:root {
    background-image: url('/img/bg.png');
    background-position: var(--background-position);
    background-size: var(--background-scale);
    background-repeat: var(--background-repeat);
}

.icon {
    filter: invert(100%);
}

.disabledIcon {
    filter: invert(50%);
}


.mainContainer {
    margin: auto;
    margin-top: 100px;
    display: flex;
    flex-shrink: 0;
    flex-direction: column;
    justify-content: safe center;
    justify-items: safe center;
    align-items: center;
    height: 70vh;
    width: 80vw;
    overflow-x: hidden;
    overflow-y: scroll;
    overflow-anchor: none;
    border-radius: 25px;
    border-width: 3px;
    border-style: solid;
    border-color: var(--secondary-color);
    background-color: var(--main-container-color);
    padding: 5vh 5vw;
}

.topbar {
    background-color: var(--primary-color);
    width: 96vw;
    max-height: 20%;
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    float: left;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    z-index: 20;
    padding: 3vh 2vw;
}

.codeDisplay {
    background-color: var(--code-background-color);
    padding: 3%;
    color: var(--code-text-color);
    margin: 5% auto;
    flex-shrink: 1;
    justify-self: center;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    color: var(--code-text-color);
    font-weight: 700;
    line-height: 1.5;
}

.codeDisplay a {
    color: var(--code-text-color);
    font-weight: 700;
    line-height: 1;
}

.viewerContainer {
    font-size: 1.5rem;
    align-items: center;
    justify-content: center;
}

.mainMenuButtonsContainer {
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 20px;
}

.mainMenuButtonsContainer button {
    width: 50vw;
}

.languageSelectionContainer {
    display: flex;
    align-items: center;
    gap: 5px;
}

.languageSelectionContainer img {
    filter: var(--top-bar-icon-filter)
}

.languageSelectionContainer select {
    flex-shrink: 1;
}



/* This disabled LastPass on the website, since it is not needed*/
div[data-lastpass-icon-root] { display: none; }
div[data-lastpass-root] { display: none; }

